--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,3 +10,15 @@ body {
     color-scheme: dark;
   }
 }
+
+h1 {
+  @apply text-4xl font-bold text-gray-900 dark:text-gray-100;
+}
+
+button {
+  @apply px-4 py-2 text-white bg-blue-500 rounded-md shadow-md;
+
+  &:hover {
+    @apply bg-blue-600;
+  }
+}
